# ShunFengParcel/api/helloworld/v1/admin_http.pb.go
@@ -1,0 +1,276 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.0
+// - protoc             v3.21.11
+// source: api/helloworld/v1/admin.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationAdminAdminRegister = "/stream.Admin/AdminRegister"
+const OperationAdminAdminStatus = "/stream.Admin/AdminStatus"
+const OperationAdminFindAdminByUsername = "/stream.Admin/FindAdminByUsername"
+const OperationAdminSendSms = "/stream.Admin/SendSms"
+const OperationAdminUpdateAdminPersonal = "/stream.Admin/UpdateAdminPersonal"
+const OperationAdminUpdateAdminStatus = "/stream.Admin/UpdateAdminStatus"
+
+type AdminHTTPServer interface {
+	// AdminRegister Sends a greeting
+	AdminRegister(context.Context, *AdminRegisterReq) (*AdminRegisterResp, error)
+	AdminStatus(context.Context, *AdminStatusReq) (*AdminStatusResp, error)
+	FindAdminByUsername(context.Context, *FindAdminByUsernameReq) (*FindAdminByUsernameResp, error)
+	SendSms(context.Context, *SendSmsReq) (*SendSmsResp, error)
+	UpdateAdminPersonal(context.Context, *UpdateAdminPersonalReq) (*UpdateAdminPersonalResp, error)
+	UpdateAdminStatus(context.Context, *UpdateAdminStatusReq) (*UpdateAdminStatusResp, error)
+}
+
+func RegisterAdminHTTPServer(s *http.Server, srv AdminHTTPServer) {
+	r := s.Route("/")
+	r.POST("/admin/register", _Admin_AdminRegister0_HTTP_Handler(srv))
+	r.POST("/admin/findadminbyusername", _Admin_FindAdminByUsername0_HTTP_Handler(srv))
+	r.POST("/admin/update/prsonal", _Admin_UpdateAdminPersonal0_HTTP_Handler(srv))
+	r.POST("/admin/status", _Admin_AdminStatus0_HTTP_Handler(srv))
+	r.POST("/admin/status/update", _Admin_UpdateAdminStatus0_HTTP_Handler(srv))
+	r.POST("/sendsms", _Admin_SendSms0_HTTP_Handler(srv))
+}
+
+func _Admin_AdminRegister0_HTTP_Handler(srv AdminHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in AdminRegisterReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAdminAdminRegister)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.AdminRegister(ctx, req.(*AdminRegisterReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*AdminRegisterResp)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Admin_FindAdminByUsername0_HTTP_Handler(srv AdminHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in FindAdminByUsernameReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAdminFindAdminByUsername)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.FindAdminByUsername(ctx, req.(*FindAdminByUsernameReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*FindAdminByUsernameResp)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Admin_UpdateAdminPersonal0_HTTP_Handler(srv AdminHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in UpdateAdminPersonalReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAdminUpdateAdminPersonal)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.UpdateAdminPersonal(ctx, req.(*UpdateAdminPersonalReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*UpdateAdminPersonalResp)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Admin_AdminStatus0_HTTP_Handler(srv AdminHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in AdminStatusReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAdminAdminStatus)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.AdminStatus(ctx, req.(*AdminStatusReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*AdminStatusResp)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Admin_UpdateAdminStatus0_HTTP_Handler(srv AdminHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in UpdateAdminStatusReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAdminUpdateAdminStatus)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.UpdateAdminStatus(ctx, req.(*UpdateAdminStatusReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*UpdateAdminStatusResp)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Admin_SendSms0_HTTP_Handler(srv AdminHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in SendSmsReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAdminSendSms)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.SendSms(ctx, req.(*SendSmsReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*SendSmsResp)
+		return ctx.Result(200, reply)
+	}
+}
+
+type AdminHTTPClient interface {
+	// AdminRegister Sends a greeting
+	AdminRegister(ctx context.Context, req *AdminRegisterReq, opts ...http.CallOption) (rsp *AdminRegisterResp, err error)
+	AdminStatus(ctx context.Context, req *AdminStatusReq, opts ...http.CallOption) (rsp *AdminStatusResp, err error)
+	FindAdminByUsername(ctx context.Context, req *FindAdminByUsernameReq, opts ...http.CallOption) (rsp *FindAdminByUsernameResp, err error)
+	SendSms(ctx context.Context, req *SendSmsReq, opts ...http.CallOption) (rsp *SendSmsResp, err error)
+	UpdateAdminPersonal(ctx context.Context, req *UpdateAdminPersonalReq, opts ...http.CallOption) (rsp *UpdateAdminPersonalResp, err error)
+	UpdateAdminStatus(ctx context.Context, req *UpdateAdminStatusReq, opts ...http.CallOption) (rsp *UpdateAdminStatusResp, err error)
+}
+
+type AdminHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewAdminHTTPClient(client *http.Client) AdminHTTPClient {
+	return &AdminHTTPClientImpl{client}
+}
+
+// AdminRegister Sends a greeting
+func (c *AdminHTTPClientImpl) AdminRegister(ctx context.Context, in *AdminRegisterReq, opts ...http.CallOption) (*AdminRegisterResp, error) {
+	var out AdminRegisterResp
+	pattern := "/admin/register"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAdminAdminRegister))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AdminHTTPClientImpl) AdminStatus(ctx context.Context, in *AdminStatusReq, opts ...http.CallOption) (*AdminStatusResp, error) {
+	var out AdminStatusResp
+	pattern := "/admin/status"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAdminAdminStatus))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AdminHTTPClientImpl) FindAdminByUsername(ctx context.Context, in *FindAdminByUsernameReq, opts ...http.CallOption) (*FindAdminByUsernameResp, error) {
+	var out FindAdminByUsernameResp
+	pattern := "/admin/findadminbyusername"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAdminFindAdminByUsername))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AdminHTTPClientImpl) SendSms(ctx context.Context, in *SendSmsReq, opts ...http.CallOption) (*SendSmsResp, error) {
+	var out SendSmsResp
+	pattern := "/sendsms"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAdminSendSms))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AdminHTTPClientImpl) UpdateAdminPersonal(ctx context.Context, in *UpdateAdminPersonalReq, opts ...http.CallOption) (*UpdateAdminPersonalResp, error) {
+	var out UpdateAdminPersonalResp
+	pattern := "/admin/update/prsonal"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAdminUpdateAdminPersonal))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AdminHTTPClientImpl) UpdateAdminStatus(ctx context.Context, in *UpdateAdminStatusReq, opts ...http.CallOption) (*UpdateAdminStatusResp, error) {
+	var out UpdateAdminStatusResp
+	pattern := "/admin/status/update"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAdminUpdateAdminStatus))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
